objects/Project_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Implementation_SA_Team__r.Account__r.Account_18_digit_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Contact__r.Contact_18_digit_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Level_Opt_Out__c</fullName>
        <formula>Contact__r.HasOptedOutOfEmail</formula>
        <label>Contact Level Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Contacts</relationshipLabel>
        <relationshipName>Project_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IMP_ID__c</fullName>
        <formula>CASESAFEID(Implementation_SA_Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_SA_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation &amp; SA Team</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipLabel>Project Contacts</relationshipLabel>
        <relationshipName>Project_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Project_Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Secondary Contact</fullName>
                </value>
                <value>
                    <fullName>Exhibitor</fullName>
                    <label>Lead Retrieval Contact</label>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Surveys__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, any automated surveys for this Project's Group will be sent to this contact.</inlineHelpText>
        <label>Send Surveys?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Created on request of Clark, Adam #11157397</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <description>Junction object between Project and Contact, to maintain list of contacts associated with the Project's account on the Project</description>
    <label>Project Contact</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Project Account Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Send_Surveys__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>LR - 2018 Gulfstream Operators &amp; Suppliers</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Contact__c</columns>
        <columns>Role__c</columns>
        <columns>Send_Surveys__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_SA_Team__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Account_of_Contact_Same_As_Project</fullName>
        <active>false</active>
        <errorConditionFormula>Contact__r.Account.Ultimate_ParentId__c!=Project__r.pse__Account__r.Ultimate_ParentId__c</errorConditionFormula>
        <errorMessage>Contact Account does not match Project's Account</errorMessage>
    </validationRules>
</CustomObject>